# tx-replay

./: .env.example  .gitignore  .impeccable.md  README.md  docker-compose.yml
apps/api/: Cargo.toml  Dockerfile
apps/api/data/: replayer.db-shm  replayer.db-wal
apps/api/src/: main.rs
apps/api/src/models/: api.rs  error.rs  hyperliquid.rs  mod.rs
apps/api/src/routes/: mod.rs  positions.rs  replay.rs
apps/api/src/services/: fill_cache.rs  hyperliquid_client.rs  mod.rs  reconstruction.rs  replay_builder.rs  storage.rs  validation.rs
apps/web/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/positions/: page.tsx
apps/web/app/replay/[id]/: page.tsx
apps/web/components/landing/: wallet-search-form.tsx
apps/web/components/positions/: position-filters.tsx  position-table.tsx  positions-view.tsx
apps/web/components/replay/: event-list.tsx  funding-panel.tsx  market-context-panel.tsx  position-summary.tsx  replay-chart.tsx  replay-controls.tsx  replay-view.tsx
apps/web/components/shared/: page-shell.tsx
apps/web/components/ui/: badge.tsx  button.tsx  calendar.tsx  card.tsx  date-picker.tsx  input.tsx  popover.tsx  select.tsx  table.tsx
apps/web/hooks/: use-positions-query.ts  use-replay-player.ts  use-replay-pnl.ts  use-replay-query.ts
apps/web/lib/: api-client.ts  format.ts  types.ts
